--- a/RefactingForTesting/UnitTestProject1/RefactingForTestingTests.csproj
+++ b/RefactingForTesting/UnitTestProject1/RefactingForTestingTests.csproj
@@ -58,7 +58,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="CalculaBonusTests.cs" />
+    <Compile Include="ProcessaPagamentoTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
